@@ -1,0 +1,12 @@
+#
+# type of stuff...
+#
+println(typeOf("hello world!"));
+println(typeOf(3));
+println(typeOf(3.0));
+println(typeOf($null));
+println(typeOf(%()));
+println(typeOf(@()));
+println(typeOf({ println("foo!"); }));
+println(typeOf(^String));
+
